--- a/contributors/index.html
+++ b/contributors/index.html
@@ -360,7 +360,7 @@
 
 
 <h1 id="contributors">Contributors</h1>
-<p>The main code contributors for this project are Pablo Martin Garcia, Justin Effendi, Brian Gonzalez, Evan Thomas, Jack Deng, Cheyenne Halverson, Jolie Chen, Anthony Wang, Dominic Santa Lucia, Andres Chiva, Javier Martin, and Alexander Thomas from the Georgia Tech Low Gravity Science and Technology Lab.</p>
+<p>The primary programmers of SLOSH-ML have been Pablo Martin Garcia, Justin Effendi, Brian Gonzalez, Evan Thomas, Jack Deng, Cheyenne Halverson, Jolie Chen, Anthony Wang, Dominic Santa Lucia, Andres Chiva, Javier Martin, and Alexander Thomas from the Georgia Tech Low Gravity Science and Technology Lab. The project is coordinated by Prof. Álvaro Romero-Calvo (<a href="mailto:alvaro.romerocalvo@gatech.edu">alvaro.romerocalvo@gatech.edu</a>).</p>
 
 
 
